package msgProtoBuf;

//go中导出结构体、方法必须大写
message Msg
{
    required int32 MsgType = 1;     //必选字段
    required string MsgInfo = 2;    //必选字段
    required string MsgFrom = 3;    //必选字段
}
